Apps_deployment/Policy-Group/Policy-postgresql-fromAndTo/allow-postgresql-ingress-from-auth.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress
  namespace: app-services 
spec:
  podSelector:
    matchLabels:
      app: postgres 
  policyTypes:
    - Ingress 
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: auth-service 
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: app-services 
      ports:
        - protocol: TCP
          port: 5432
